--- a/www/partials/recipe.html
+++ b/www/partials/recipe.html
@@ -57,29 +57,7 @@
     <table>
     <tr>
     <th>1</th>
-    <td>1人分ずつ作る。ボールに卵2個を割り入れ、牛乳大さじ1と塩少々を加える。菜箸2本を間隔をあけて持ち、ボールの底をこするようにして、白身と黄身が混ざるまでしっかり溶きほぐす。白身のかたまりが残っていると、フライパンに広げにくいので注意する。</td>
-    </tr>
-    <tr>
-    <th>2</th>
-    <td>チキンライスを炒めたフライパンをさっと洗い、ペーパータオルで水けを拭く。サラダ油小さじ2を入れて強めの中火にかけ、1分ほど熱する。卵液を一度に加え、すぐにフライパン全体に広げる。火の通りにくい中心だけを菜箸で手早くかき混ぜる。</td>
-    </tr>
-    <tr>
-    <th>3</th>
-    <td>卵の中心が半熟状になったら火を止める。チキンライスの1/2量を卵の中心よりもやや手前に、横に細長く、ラグビーボールのような形になるようにしてのせる。フライパンを少し手前に傾け、向こう側から卵を破かないよう、フライ返しの先をフライパンに押し当てるようにして、卵の下に斜めに差し込む。</td>
-    </tr>
-
-    <tr>
-      <th>4</th>
-      <td>卵をそっとチキンライスにかぶせる
-差し込んだフライ返しを手前に起こしながら卵をそっと持ち上げ、チキンライスをおおうようにそっとかぶせる。さらにフライ返しで手前に引き寄せて、フライパンの側面にかるく押し当てながら形作る。</td>
-    </tr>
-    <tr>
-      <th>5</th>
-      <td>皿の上でフライパンを少し傾け、縁が皿に当たるくらいまで近づける。卵の中からチキンライスがこぼれないよう、合わせ目にフライ返しを当て、その上にオムライスをかぶせるようにして、フライパンをそっと返す。フライ返しを横にすべらすようにして引き抜き、オムライスを皿に移す。</td>
-    </tr>
-    <tr>
-      <th>6</th>
-      <td>オムライスが熱いうちにペーパータオルで包み、はみ出た卵を下に押し込むようにしながら、両手でこんもりとしたラグビーボール形に整える。もう1人分も同様に作り、それぞれにケチャップ適宜をかける。</td>
+    <td>1人分ずつかける。</td>
     </tr>
 
 
