--- a/www/partials/setting.html
+++ b/www/partials/setting.html
@@ -1,4 +1,4 @@
-<div class="setting_section_box">
+<!-- <div class="setting_section_box">
   <p class="setting_section_title">アカウント</p>
   <div class="setting_section social">
     <i class="fa fa-twitter"></i>Sign in with twitter<i class="fa fa-angle-right"></i>
@@ -6,7 +6,7 @@
     <i class="fa fa-instagram"></i>hogehoge<i class="fa fa-angle-right"></i>
   </div>
 </div>
-
+ -->
 <div class="setting_section_box">
   <p class="setting_section_title">運営</p>
   <div class="setting_section note">
