--- a/www/css/style.css
+++ b/www/css/style.css
@@ -66,6 +66,7 @@ body{
     rgb(255,255,255) 8px,
     rgb(255,255,255) 16px
   );
+  -webkit-tap-highlight-color:rgba(0,0,0,0);
 }
 
 #header{
@@ -151,6 +152,12 @@ div#main,#header_title{
   width:50%;
   text-align: center;
   float: left;
+}
+
+.footer_button.selected{
+  color: rgb(255,255,255);
+  text-shadow: 0px 1px 0px rgb(213,199,174);  
+
 }
 
 /*
@@ -318,7 +325,8 @@ recipe
   margin-left : auto ; margin-right : auto ;
   border-radius: 6px;
   background: #fff;
-  box-shadow: 0px 2px 3px rgba(50,50,50,0.4);
+    border: 1px solid rgb(200,200,200);
+  /*box-shadow: 0px 2px 3px rgba(50,50,50,0.4);*/
 }
 
 #recipe_image img{
@@ -658,6 +666,20 @@ post
   border-radius: 6px;
 }
 
+#post_button{
+  margin-top: 20px;
+  margin-left : auto ; margin-right : auto ;
+  width: 180px;
+  text-align: center;
+  height: 20px;
+  padding: 13px;
+  font-size: 20px;
+  color: rgb(255,255,255);
+  background-color: rgb(39,176,59);
+  border-radius: 6px;
+  box-shadow: 0px -2px 0px rgb(0,100,6) inset;
+  margin-bottom: 50px;
+}
 
 
 /*
