--- a/www/partials/setting.html
+++ b/www/partials/setting.html
@@ -8,6 +8,14 @@
 </div>
  -->
 <div class="setting_section_box">
+  <p class="setting_section_title">チュートリアル</p>
+  <div class="setting_section note" ng-click="tutorial()">
+  チュートリアルを見る  
+  </div>
+</div>
+
+
+<div class="setting_section_box">
   <p class="setting_section_title">運営</p>
   <div class="setting_section note">
   このアプリは楽天株式会社から提供されている楽天レシピを仕様しています。<br>
