--- a/www/partials/setting.html
+++ b/www/partials/setting.html
@@ -34,4 +34,6 @@
 </div>
 
 
-<div id="setting_logout">ログアウト</div>
+<div id="setting_logout" ng-click="logout()" >ログアウト</div>
+
+<img id="developer" ng-click="easteregg()" src="./img/mousemaze.gif">
