--- a/www/css/style.css
+++ b/www/css/style.css
@@ -58,6 +58,10 @@ common
 ==========
 */
 
+i{
+  display: block;
+}
+
 body{
   background: repeating-linear-gradient(
     90deg,
@@ -365,7 +369,7 @@ recipe
 }
 
 #recipe_image{
-  margin-top: -250px;
+  margin-top: -260px;
   width: 260px;
   height: 260px;
   background-size:cover;
@@ -700,7 +704,7 @@ post
 }
 
 #post_image{
-  margin: -100px;
+  margin-left: -110px;
   height: 100px;
   width: 100px;
   float: left;
@@ -785,7 +789,7 @@ postafter
 */
 
 #postafter_image{
-  margin: -100px;
+  margin-left: -110px;
   height: 100px;
   width: 100px;
   float: left;
@@ -1001,3 +1005,10 @@ i.fa.fa-instagram {
   font-size: 14px !important;
 }
 
+#developer{
+  display: block;
+  width: 50px;
+  margin: 50px;
+  margin-left: auto;
+  margin-right: auto;
+}
