--- a/www/partials/recommend.html
+++ b/www/partials/recommend.html
@@ -11,8 +11,9 @@
     <div ng-repeat="recipe in recipes" class="recommend_card" carousel-item index="{{$index}}">
       <div class="recommend_card_img" style="background-image: url({{recipe.image_url}})"></div>
       <p class="recommend_card_title">{{recipe.name}}</p>
-      <p class="recommend_card_ingridients"><i ng-repeat="ingredient in recipe.ingredients">{{ingredient}},</i></p>
+      <p class="recommend_card_ingridients">{{recipe.ingredients.join(", ")}}</p>
     </div>
+    
   </div>
 </div>
 
