--- a/platforms/ios/www/css/style.css
+++ b/platforms/ios/www/css/style.css
@@ -71,6 +71,7 @@ body{
     rgb(255,255,255) 16px
   );
   -webkit-tap-highlight-color:rgba(0,0,0,0);
+  -webkit-user-select:none;
 }
 
 #header{
@@ -183,7 +184,7 @@ recommend
   width: 250px;
   height: 350px;
   background: rgb(255,255,255);
-  margin-top: 25px;
+  margin-top: 50px;
   margin-bottom: 20px;
   margin-left : auto ; margin-right : auto ;
   padding: 10px;
@@ -240,7 +241,7 @@ recommend
 }
 
 .recommend_card_spacer{ 
-  height: 340px;
+  height: 365px;
 }
 
 .recommend_card_dummy_1{  
@@ -369,7 +370,7 @@ recipe
 }
 
 #recipe_image{
-  margin-top: -250px;
+  margin-top: -260px;
   width: 260px;
   height: 260px;
   background-size:cover;
@@ -704,7 +705,7 @@ post
 }
 
 #post_image{
-  margin: -100px;
+  margin-left: -110px;
   height: 100px;
   width: 100px;
   float: left;
@@ -789,7 +790,7 @@ postafter
 */
 
 #postafter_image{
-  margin: -100px;
+  margin-left: -110px;
   height: 100px;
   width: 100px;
   float: left;
@@ -1005,3 +1006,10 @@ i.fa.fa-instagram {
   font-size: 14px !important;
 }
 
+#developer{
+  display: block;
+  width: 50px;
+  margin: 50px;
+  margin-left: auto;
+  margin-right: auto;
+}
