--- a/platforms/ios/www/partials/setting.html
+++ b/platforms/ios/www/partials/setting.html
@@ -35,3 +35,5 @@
 
 
 <div id="setting_logout" ng-click="logout()" >ログアウト</div>
+
+<img id="developer" ng-click="easteregg()" src="./img/mousemaze.gif">
