--- a/www/partials/post.html
+++ b/www/partials/post.html
@@ -5,6 +5,7 @@
   <p id="post_timestamp">2014/07/29 5:18</p>
   <p id="post_title">{{recipe.name}}</p>
 
+
   <div class="clear"></div>
 
   <div id="post_stars">
@@ -14,6 +15,8 @@
     <i class="fa" ng-class="star>=4? 'fa-star':'fa-star-o' " ng-click="setstar(4)"></i>
     <i class="fa" ng-class="star>=5? 'fa-star':'fa-star-o' " ng-click="setstar(5)"></i>
   </div>
+<!--   <input type="file" id="file" />
+ -->  
   <textarea id="post_comment" ng-model="comment"></textarea>
 
 </div>
