--- a/www/partials/recipe.html
+++ b/www/partials/recipe.html
@@ -33,7 +33,7 @@
   <div class="recipe_subsection">
     <table>    
     <tr ng-repeat="ingredient in recipe.foods">
-    <th>{{ingredient.name}}</th>
+    <th>{{ingredient.screen_name}}</th>
     <td>{{ingredient.amount}}</td>
     </tr>
     </table>
