--- a/www/partials/post.html
+++ b/www/partials/post.html
@@ -2,7 +2,7 @@
   <div id="post_image_404" style="background-image: url('./img/img404.jpg')"></div>
   <div id="post_image" style="background-image: url({{recipe.default_picture_name}})"></div>
 
-  <p id="post_timestamp">2014/07/29 5:18</p>
+  <!-- <p id="post_timestamp">2014/07/29 5:18</p> -->
   <p id="post_title">{{recipe.name}}</p>
 
 
