--- a/www/partials/setting.html
+++ b/www/partials/setting.html
@@ -28,12 +28,11 @@
   <p class="setting_section_title">お問い合わせ</p>
   <div class="setting_section">
     <p id="setting_inquery">欲しい機能、改善して欲しい点など、何でもお聞かせください。</p>
-    <textarea id="mypage_inquery_form" placeholder="例：眠い" ></textarea>
-    <div id="mypage_inquery_button">送信</div>
+    <p id="setting_mail" ><a href="mailto:user@dammy.com"><i class="fa fa-envelope" >メールソフトを開く</i></a></p>
   </div>
 </div>
 
 
-<div id="setting_logout" ng-click="logout()" >ログアウト</div>
+<div id="setting_logout" ng-click="logout()" >リセット</div>
 
 <img id="developer" ng-click="easteregg()" src="./img/mousemaze.gif">
