--- a/platforms/ios/www/css/style.css
+++ b/platforms/ios/www/css/style.css
@@ -582,10 +582,14 @@ mypage
   background-color: rgb(255,255,255);
   box-shadow: 0px -1px 0px rgb(200,200,200) inset;
 }
-.mypage_recipe img{
+.mypage_recipe_img{
   height: 100px;
   width: 100px;
   float: left;
+  margin: 5px;
+  background-size:cover;
+  background-position: center center;
+  background-repeat: no-repeat;
 }
 
 .mypage_recipe_detail{
@@ -688,6 +692,11 @@ setting
   text-align: center;
 }
 
+#setting_mail{
+  display: block;
+  padding: 5px;
+  /*font-size: 20px;*/
+}
 
 /*
 ----------
