--- a/platforms/ios/www/partials/postafter.html
+++ b/platforms/ios/www/partials/postafter.html
@@ -1,7 +1,7 @@
 <div id="post_section">
   <div id="post_image_404" style="background-image: url('./img/img404.jpg')"></div>
   <div id="postafter_image" style="background-image: url({{postInformation.recipe.default_picture_name}})"></div>
-  <p id="post_timestamp">2014/07/29 5:18</p>
+  <!-- <p id="post_timestamp">2014/07/29 5:18</p> -->
   <p id="post_title">{{postInformation.recipe.name}}</p>
 
   <div class="clear"></div>
