--- a/platforms/ios/www/partials/recommend.html
+++ b/platforms/ios/www/partials/recommend.html
@@ -1,12 +1,16 @@
 <img class="recommend_card_like" src="./img/like.png">
 <img class="recommend_card_nope" src="./img/nope.png">
 
+
+      <img src="./img/loading.png" class="recommend_loading">
+
+
 <div id="carousel-example" class="carousel">
   <div class="carousel-inner">
-
+<!-- 
     <div class="recommend_card" >
       <img src="./img/loading.png" class="recommend_loading">
-    </div>
+    </div> -->
 
     <div ng-repeat="recipe in recipes" class="recommend_card" carousel-item index="{{$index}}">
       <div class="recommend_card_img" style="background-image: url({{recipe.image_url}})"></div>
@@ -18,8 +22,8 @@
 </div>
 
 <div class="recommend_card_spacer"></div>
-<div class="recommend_card_dummy_1"></div>
-<div class="recommend_card_dummy_2"></div>
+<div ng-if="recipes.length >= 2" class="recommend_card_dummy_1"></div>
+<div ng-if="recipes.length >= 3" class="recommend_card_dummy_2"></div>
 
 <div id="recommend_button_box">
 <!--   <div class="recommend_button like">
